# Machine-learning

./: .gitignore  columns.py  pyproject.toml
feature_pipeline/src/: data.py  data_handling.py  data_preprocessing.py  exceptions.py  feature_engineering.py  main.py  pipeline.py  settings.py  tft.py  utils.py
models/: combined_model.pkl
models/checkpoints/: models_checkpoint.pkl
src/: analyze_product.py  data.py  data_preprocessing.py  feature_engineering.py  main.py  metrics.py  models.py  monitor.py  read_data.py  relevacy_check.py  settings.py  store_data.py
training_pipeline/src/: comet_logger.py  config.py  ensemble.py  hopsworks_manager.py  load_data.py  main.py  model_evaluator.py  model_trainer.py  pipeline.py
