[tool.poetry]
name = "inventory-predictions"
version = "0.1.0"
description = ""
authors = ["developerrr-77 <shahnoorr9955@gmail.com>"]
readme = "README.md"
packages = [{include = "inventory_predictions", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
